Cleanup of bibliography formatting.  Uses class tags on the assumption that CSS is available, rather than inline markup.

--- a/ref/sample_bib.html
+++ b/ref/sample_bib.html
@@ -37,13 +37,17 @@
     line-height: 200%;
   }
 
+  .hanging-indent {
+    text-indent: -3em;
+  }
+
 </style>
 </head>
 <body>
 <h1>Phoney Bibliography</h1>
 <ul class="bibliography doublespace">
 <li class="bibentry doublegap">
-  <span class="first"><b>[W]</b></span> Other words go here. Other words go
+  <span class="first"><b>[W]</b></span>Other words go here. Other words go
   here. Other words go here. Other words go here.
   Blah blah blah blah blah blah blah blah blah blah blah blah blah.
 </li>
@@ -57,8 +61,8 @@
   here. Other words go here. Other words go here.
   Blah blah blah blah blah blah blah blah blah blah blah blah blah.
 </li>
-<li class="bibentry doublegap">
-  <span class="first"><i>[Word]</i></span> Other words go here. Other words go
+<li class="bibentry hanging-indent">
+  Other words go here. Other words go
   here. Other words go here. Other words go here.
   Blah blah blah blah blah blah blah blah blah blah blah blah blah.
 </li>
