Add support for display=block, sort of.

--- a/ref/sample_bib.html
+++ b/ref/sample_bib.html
@@ -47,10 +47,10 @@
 <h1>Phoney Bibliography</h1>
 <ul class="bibliography doublespace">
 <li class="bibentry doublegap">
-  <span class="first"><b>[W]</b></span><span>Other words go here. Other words go
-  here. Other <span style="display:block;">words go here.</span> Other words go here.
-  Blah blah blah blah blah blah blah blah blah blah blah blah
-blah.</span>
+  <span class="first"><b>[W]</b></span><span class="other">Other words go here. Other words go
+  here. Other stuff.
+ Other words go here. Blah blah blah blah blah blah blah blah blah blah blah blah
+blah.<span style="display:block;margin-left:5em;">I am a display block.</span></span>
 </li>
 <li class="bibentry doublegap">
   <span class="first"><b>[10]</b></span> Other words go here. Other words go
