Simplify bibliography markup (use div instead of ul, eliminate visual class assignments).  This changeset also corrects several serious bugs in subsequent-author-substitute.

--- a/ref/aaa-sample.html
+++ b/ref/aaa-sample.html
@@ -15,24 +15,20 @@ div.csl-entry {
   margin-top:0.5em;
 }
 
-div.csl-subheading {
+div.csl-entry-heading {
   margin-top:0.5em;
   margin-bottom:0.5em;
   font-weight:bold;
-  //background:#eeeeee;
 }
 
-div.csl-label {
+div.csl-left-label {
   width:5em;
   float:left;
   text-indent:1em;
-  //border:solid red 2px;
 }
 
 div.csl-item {
   margin-left:5em;
-  vertical-align:top;
-  //border:solid red 1px;
 }
 
 </style>
@@ -41,10 +37,10 @@ div.csl-item {
 
 <!-- BIB ENTRY: Doe 1999 -->
 <div class="csl-entry">
-  <div class="csl-subheading" >
+  <div class="csl-entry-heading" >
     John Aloysius Doe
   </div>
-  <div class="csl-label" >
+  <div class="csl-left-label" >
     1999
   </div>
   <div class="csl-item">
@@ -56,7 +52,7 @@ div.csl-item {
 <!-- BIB ENTRY: Doe 2000 -->
 <div class="csl-entry">
   <!-- Author name suppressed -->
-  <div class="csl-label">
+  <div class="csl-left-label">
     2000
   </div>
   <div class="csl-item">
@@ -67,10 +63,10 @@ div.csl-item {
 
 <!-- BIB ENTRY: Roe 1999a -->
 <div class="csl-entry">
-  <div class="csl-subheading">
+  <div class="csl-entry-heading">
     Jane Henrietta Roe
   </div>
-  <div class="csl-label">
+  <div class="csl-left-label">
     1999a
   </div>
   <div class="csl-item">
@@ -82,7 +78,7 @@ div.csl-item {
 <!-- BIB ENTRY: Roe 1999b -->
 <div class="csl-entry">
   <!-- Author name suppressed -->
-  <div class="csl-label">
+  <div class="csl-left-label">
     1999b
   </div>
   <div class="csl-item">
@@ -94,7 +90,7 @@ div.csl-item {
 <!-- BIB ENTRY: Roe 2000 -->
 <div class="csl-entry">
   <!-- Author name suppressed -->
-  <div class="csl-label">
+  <div class="csl-left-label">
     2000
   </div>
   <div class="csl-item">
