Add version maintenance jiggery-pokery to documentation grinder.

--- a/ref/citeproc-doc/index.html
+++ b/ref/citeproc-doc/index.html
@@ -291,9 +291,8 @@ pre.codeblock span.Error { color: red; font-weight: bold; }
 <div class="document" id="citation-style-language">
 <h1 class="title">Citation Style Language</h1>
 <h2 class="subtitle" id="manual-for-the-citeproc-js-processor">Manual for the <tt class="docutils literal"><span class="pre">citeproc-js</span></tt> Processor</h2>
-<p class="info-version">version 1.00a1</p>
-<p class="info-date">October, 2009</p>
-<dl class="contributors docutils">
+<p class="info-version">version 1.00a</p>
+<dl class="contributors info-date docutils">
 <dt>Author</dt>
 <dd><ul class="first last simple">
 <li>Frank G. Bennett, Jr.</li>
