Update to documentation.

--- a/ref/citeproc-doc/index.html
+++ b/ref/citeproc-doc/index.html
@@ -107,12 +107,13 @@ blockquote.clothesline {
 }
 
 div.admonition {
+  clear: both;
   border: 3px solid #c0c0c0;
   float: right;
   width: 37%;
   padding: 0px 5px 0px 5px;
   background: white;
-  margin: -0.5em -0.5em 0px 5px;
+  margin: -0.5em -0.5em 1em 5px;
 }
 
 blockquote.clothesline div.admonition {
@@ -291,8 +292,8 @@ pre.codeblock span.Error { color: red; font-weight: bold; }
 <div class="document" id="citation-style-language">
 <h1 class="title">Citation Style Language</h1>
 <h2 class="subtitle" id="manual-for-the-citeproc-js-processor">Manual for the <tt class="docutils literal"><span class="pre">citeproc-js</span></tt> Processor</h2>
-<p class="info-version">version 1.00a1</p>
-<p class="info-date">October, 2009</p>
+<p class="info-version">version 1.00a3</p>
+<p class="info-date">4 October 2009</p>
 <dl class="contributors docutils">
 <dt>Author</dt>
 <dd><ul class="first last simple">
@@ -814,11 +815,17 @@ be delivered separately from the family and given name,
 as <tt class="docutils literal"><span class="pre">dropping-particle</span></tt> and <tt class="docutils literal"><span class="pre">non-dropping-particle</span></tt> elements.
 Name suffixes such as the &quot;Jr.&quot; in &quot;Frank Bennett Jr.&quot; can be
 delivered as a <tt class="docutils literal"><span class="pre">suffix</span></tt> element.</p>
-<div class="admonition-important admonition">
-<p class="first admonition-title">Important</p>
+<div class="admonition-hint admonition">
+<p class="first admonition-title">Hint</p>
 <p class="last">A simplified format for delivering particles and name suffixes
 to the processor is described below in the section
 <img alt="link" src="link.png" /> <a class="reference" href="#dirty-names">Dirty Tricks → Input data rescue → Names</a>.</p>
+</div>
+<div class="admonition-important admonition">
+<p class="first admonition-title">Important</p>
+<p class="last">Note the escaped quotation marks around the last example.
+This is a side effect of the dirty trickery described
+under the link above.</p>
 </div>
 <div class="codeblock js">
 <table class="highlighttable"><tr><td class="linenos"><pre> 1
@@ -851,7 +858,7 @@ to the processor is described below in the section
       <span class="s2">&quot;given&quot;</span> <span class="o">:</span> <span class="s2">&quot;James&quot;</span><span class="o">,</span>
       <span class="s2">&quot;suffix&quot;</span> <span class="o">:</span> <span class="s2">&quot;Jr.&quot;</span>
     <span class="p">}</span><span class="o">,</span>
-    <span class="p">{</span> <span class="s2">&quot;family&quot;</span> <span class="o">:</span> <span class="s2">&quot;van der Vlist&quot;</span><span class="o">,</span>
+    <span class="p">{</span> <span class="s2">&quot;family&quot;</span> <span class="o">:</span> <span class="s2">&quot;\&quot;van der Vlist\&quot;&quot;</span><span class="o">,</span>
       <span class="s2">&quot;given&quot;</span> <span class="o">:</span> <span class="s2">&quot;Eric&quot;</span>
     <span class="p">}</span>
   <span class="p">]</span>
