--- a/ref/citeproc-doc/index.html
+++ b/ref/citeproc-doc/index.html
@@ -297,7 +297,7 @@ pre.codeblock span.Error { color: red; font-weight: bold; }
 <h1 class="title"><a class="reference" href="#table-of-contents">Citation Style Language</a></h1>
 <h2 class="subtitle" id="manual-for-the-citeproc-js-processor">Manual for the <tt class="docutils literal"><span class="pre">citeproc-js</span></tt> Processor</h2>
 <div align="center" class="align-center"><img alt="counter.gif" class="double-border align-center" src="counter.gif" /></div>
-<p class="info-version">version 1.00<sub>a11</sub></p>
+<p class="info-version">version 1.00<sub>a12</sub></p>
 <p class="info-date">5 October 2009</p>
 <dl class="contributors docutils">
 <dt>Author</dt>
@@ -879,7 +879,7 @@ under the link above.</p>
 </div>
 <div class="section">
 <h4><a class="toc-backref" href="#id52" id="non-byzantine-names" name="non-byzantine-names"><span id="input-byzantine"></span>&quot;non-Byzantine&quot; names</a></h4>
-<p>Names not written in the Latin, Greek, Arabic or Cyrillic
+<p>Names not written in the Latin or Cyrillic
 scripts <a class="footnote-reference" href="#id17" id="id12" name="id12">[3]</a> are always displayed
 with the family name first.  No special hint is needed in
 the input data; the processor is sensitive to the character
@@ -1108,9 +1108,9 @@ refer to the CSL specification, available via <a class="reference" href="http://
 <table class="docutils footnote" frame="void" id="id17" rules="none">
 <colgroup><col class="label" /><col /></colgroup>
 <tbody valign="top">
-<tr><td class="label"><a class="fn-backref" href="#id12" name="id17">[3]</a></td><td>The Latin, Greek, Arabic and Cyrillic scripts are referred to here collectively
+<tr><td class="label"><a class="fn-backref" href="#id12" name="id17">[3]</a></td><td>The Latin and Cyrillic scripts are referred to here collectively
 as &quot;Byzantine scripts&quot;, after the confluence of cultures in the first
-millenium that spanned all four.</td></tr>
+millenium that spanned both.</td></tr>
 </tbody>
 </table>
 <table class="docutils footnote" frame="void" id="id18" rules="none">
