--- a/ref/citeproc-doc/index.html
+++ b/ref/citeproc-doc/index.html
@@ -297,7 +297,7 @@ pre.codeblock span.Error { color: red; font-weight: bold; }
 <h1 class="title"><a class="reference" href="#table-of-contents">Citation Style Language</a></h1>
 <h2 class="subtitle" id="manual-for-the-citeproc-js-processor">Manual for the <tt class="docutils literal"><span class="pre">citeproc-js</span></tt> Processor</h2>
 <div align="center" class="align-center"><img alt="counter.gif" class="double-border align-center" src="counter.gif" /></div>
-<p class="info-version">version 1.00<sub>a16</sub></p>
+<p class="info-version">version 1.00<sub>a17</sub></p>
 <p class="info-date">6 October 2009</p>
 <dl class="contributors docutils">
 <dt>Author</dt>
@@ -329,8 +329,8 @@ pre.codeblock span.Error { color: red; font-weight: bold; }
 <li><a class="reference" href="#updateitems" id="id42" name="id42"><tt class="docutils literal"><span class="pre">updateItems()</span></tt></a></li>
 <li><a class="reference" href="#makebibliography" id="id43" name="id43"><tt class="docutils literal"><span class="pre">makeBibliography()</span></tt></a></li>
 <li><a class="reference" href="#makecitationcluster" id="id44" name="id44"><tt class="docutils literal"><span class="pre">makeCitationCluster()</span></tt></a></li>
-<li><a class="reference" href="#setoutputformat" id="id45" name="id45">setOutputFormat()</a></li>
-<li><a class="reference" href="#setcontainertitleabbreviations" id="id46" name="id46">setContainerTitleAbbreviations()</a></li>
+<li><a class="reference" href="#setoutputformat" id="id45" name="id45"><tt class="docutils literal"><span class="pre">setOutputFormat()</span></tt></a></li>
+<li><a class="reference" href="#setcontainertitleabbreviations" id="id46" name="id46"><tt class="docutils literal"><span class="pre">setContainerTitleAbbreviations()</span></tt></a></li>
 </ul>
 </li>
 <li><a class="reference" href="#local-environment" id="id47" name="id47">Local Environment</a><ul>
@@ -663,7 +663,7 @@ usage.</p>
 </div>
 </div>
 <div class="section">
-<h2><a class="toc-backref" href="#id45" id="setoutputformat" name="setoutputformat">setOutputFormat()</a></h2>
+<h2><a class="toc-backref" href="#id45" id="setoutputformat" name="setoutputformat"><tt class="docutils literal"><span class="pre">setOutputFormat()</span></tt></a></h2>
 <p>The output format of the processor can be changed after instantiation
 using the <tt class="docutils literal"><span class="pre">setOutputFormat()</span></tt> command.  This command is specific
 to the <tt class="docutils literal"><span class="pre">citeproc-js</span></tt> processor.</p>
@@ -679,7 +679,7 @@ on defining new output formats.</p>
 </div>
 </div>
 <div class="section">
-<h2><a class="toc-backref" href="#id46" id="setcontainertitleabbreviations" name="setcontainertitleabbreviations">setContainerTitleAbbreviations()</a></h2>
+<h2><a class="toc-backref" href="#id46" id="setcontainertitleabbreviations" name="setcontainertitleabbreviations"><tt class="docutils literal"><span class="pre">setContainerTitleAbbreviations()</span></tt></a></h2>
 <p>A list of journal title abbreviations can be set on the processor
 using the <tt class="docutils literal"><span class="pre">setContainerTitleAbbreviations()</span></tt> command.
 This command is also specfic to <tt class="docutils literal"><span class="pre">citeproc-js</span></tt>:</p>
