--- a/README.html
+++ b/README.html
@@ -7,279 +7,306 @@
 <title>README.txt</title>
 <style type="text/css">
 
-/*
-:Author: David Goodger (goodger@python.org)
-:Id: $Id: html4css1.css 5196 2007-06-03 20:25:28Z wiemann $
-:Copyright: This stylesheet has been placed in the public domain.
+body { 
+    width: 750px; 
+    margin: auto; 
+    position: center; 
+    font-family: 'Lucida Sans', Verdana, sans-serif; 
+    font-size: 10.5pt; 
+    color: #434343;
+    line-height: 135%; !important
+}
 
-Default cascading style sheet for the HTML output of Docutils.
+.xml { padding: 1em; border: silver 1px solid; background: #EAFABC; }
+.relaxngcompact { padding: 1em; border: silver 1px solid; background: #F6F9ED; }
 
-See http://docutils.sf.net/docs/howto/html-stylesheets.html for how to
-customize this style sheet.
-*/
+.clothesline {
+  position: relative;
+}
 
-/* used to remove borders from tables and images */
-.borderless, table.borderless td, table.borderless th {
-  border: 0 }
+.double-border {
+  border: 5px double black;
+}
 
-table.borderless td, table.borderless th {
-  /* Override padding for "table.docutils td" with "! important".
-     The right padding separates the table cells. */
-  padding: 0 0.5em 0 0 ! important }
+h4 a {
+  padding: 4px;
+  border: 1px solid black;
+}
 
-.first {
-  /* Override more specific margin styles with "! important". */
-  margin-top: 0 ! important }
+/* .js { padding: 1em; border: silver 1px solid; background: #FFF68F; } */
+.js { padding: 1em; border: silver 1px solid; background: #EAFABC; }
+.text { padding: 1em; border: silver 1px solid; background: #FFcccc; }
 
-.last, .with-subtitle {
-  margin-bottom: 0 ! important }
+dl { background: #B7FCE1; padding:1em; border: silver 1px solid;}
+dt { font-weight: bold; margin-top: 0.5em; }
 
-.hidden {
-  display: none }
+.info-version { text-align: center; font-size: 130%; font-weight: bold; }
+.info-date { text-align: center; font-size: 110%; font-weight: bold; }
+.title { text-align: center; margin: 4em 4em 1em 4em; }
+.subtitle { text-align: center; margin: 1em 4em 4em 4em; }
+.topic-title { font-weight: bold; font-size: 130%; }
+.contents { margin-bottom: 1em; }
 
-a.toc-backref {
-  text-decoration: none ;
-  color: black }
+.contributors { margin-left: 250px; margin-top: 2em; margin-bottom: 2em; }
+dl.contributors { background: white; border: none; }
+.contributors dt { margin: 1em; }
 
-blockquote.epigraph {
-  margin: 2em 5em ; }
+span.sc {
+  font-variant: small-caps;
+  color: black;
+}
 
-dl.docutils dd {
-  margin-bottom: 0.5em }
+tt.literal .pre {
+  font-family: monospace;
+  color: #232323;
+  background: #d9d9d9;
+  padding: 0px 2px 0px 2px;
+}
 
-/* Uncomment (and remove this text!) to get bold-faced definition list terms
-dl.docutils dt {
-  font-weight: bold }
-*/
+a { 
+    border-bottom: dotted 1px #999; 
+    text-decoration: none;
+}
 
-div.abstract {
-  margin: 2em 5em }
+blockquote {
+    background: #B7FCE1; 
+    margin-left: 3em;
+    padding:1em; 
+    border: silver 1px solid;
+}
 
-div.abstract p.topic-title {
-  font-weight: bold ;
-  text-align: center }
+blockquote.inline-wrapper {
+    background: white;
+    margin: 0px;
+    padding: 0px;
+    border: 1px none black;
+    text-align: center;
+}
 
-div.admonition, div.attention, div.caution, div.danger, div.error,
-div.hint, div.important, div.note, div.tip, div.warning {
-  margin: 2em ;
-  border: medium outset ;
-  padding: 1em }
+blockquote.inline-wrapper div {
+    display: inline;
+}
 
-div.admonition p.admonition-title, div.hint p.admonition-title,
-div.important p.admonition-title, div.note p.admonition-title,
-div.tip p.admonition-title {
-  font-weight: bold ;
-  font-family: sans-serif }
+blockquote.inline-wrapper p {
+    vertical-align: top;
+    display: inline;
+}
 
-div.attention p.admonition-title, div.caution p.admonition-title,
-div.danger p.admonition-title, div.error p.admonition-title,
-div.warning p.admonition-title {
-  color: red ;
-  font-weight: bold ;
-  font-family: sans-serif }
+.superscript {
+  margin-bottom: 1em;
+}
 
-/* Uncomment (and remove this text!) to get reduced vertical space in
-   compound paragraphs.
-div.compound .compound-first, div.compound .compound-middle {
-  margin-bottom: 0.5em }
+a.toc-backref tt.literal .pre {
+    background: white;
+}
 
-div.compound .compound-last, div.compound .compound-middle {
-  margin-top: 0.5em }
-*/
 
-div.dedication {
-  margin: 2em 5em ;
-  text-align: center ;
-  font-style: italic }
+a:link { color: #636363; font-weight: bold;}
+a:visited { color: #636363; font-weight: bold; }
+a:active { color: #636363; font-weight: bold; }
+a:hover { color: #a30826; font-weight: bold; }
 
-div.dedication p.topic-title {
-  font-weight: bold ;
-  font-style: normal }
+a tt.literal .pre:link { color: #131313; }
+a tt.literal .pre:visited { color: #131313; }
+a tt.literal .pre:active { color: #131313; }
+a tt.literal .pre:hover { color: #a30826; }
 
-div.figure {
-  margin-left: 2em ;
-  margin-right: 2em }
+.contents a:link { color: #434343; font-weight: normal; }
+.contents a:visited { color: #434343; font-weight: normal; }
+.contents a:active { color: #434343; font-weight: normal; }
+.contents a:hover { color: #a30826; }
 
-div.footer, div.header {
+a.toc-backref:link { color: black; } 
+a.toc-backref:visited { color: black; } 
+a.toc-backref:active { color: black; } 
+a.toc-backref:hover { color: #a30826; }
+
+blockquote.clothesline {
+  position: relative;
+  padding: 0px;
+  margin: 0px;
+  border: 0px none;
+}
+
+div.admonition {
   clear: both;
-  font-size: smaller }
+  border: 3px solid #c0c0c0;
+  float: right;
+  width: 37%;
+  padding: 0px 5px 0px 5px;
+  background: white;
+  margin: -0.5em -0.5em 1em 5px;
+}
 
-div.line-block {
-  display: block ;
-  margin-top: 1em ;
-  margin-bottom: 1em }
+blockquote.clothesline div.admonition {
+  float: none;
+  position: absolute;
+  top: 0em;
+  right: 0em;
+}
 
-div.line-block div.line-block {
-  margin-top: 0 ;
-  margin-bottom: 0 ;
-  margin-left: 1.5em }
+div.admonition p {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
 
-div.sidebar {
-  margin: 0 0 0.5em 1em ;
-  border: medium outset ;
-  padding: 1em ;
-  background-color: #ffffee ;
-  width: 40% ;
-  float: right ;
-  clear: right }
+div.admonition-important .admonition-title:before {
+  content: url("important.png");
+  padding-right: 5px;
+}
 
-div.sidebar p.rubric {
-  font-family: sans-serif ;
-  font-size: medium }
+div.admonition-hint .admonition-title:before {
+  content: url("ktip.png");
+  padding-right: 5px;
+}
 
-div.system-messages {
-  margin: 5em }
-
-div.system-messages h1 {
-  color: red }
-
-div.system-message {
-  border: medium outset ;
-  padding: 1em }
-
-div.system-message p.system-message-title {
-  color: red ;
-  font-weight: bold }
-
-div.topic {
-  margin: 2em }
-
-h1.section-subtitle, h2.section-subtitle, h3.section-subtitle,
-h4.section-subtitle, h5.section-subtitle, h6.section-subtitle {
-  margin-top: 0.4em }
-
-h1.title {
-  text-align: center }
-
-h2.subtitle {
-  text-align: center }
-
-hr.docutils {
-  width: 75% }
-
-img.align-left {
-  clear: left }
-
-img.align-right {
-  clear: right }
-
-ol.simple, ul.simple {
-  margin-bottom: 1em }
-
-ol.arabic {
-  list-style: decimal }
-
-ol.loweralpha {
-  list-style: lower-alpha }
-
-ol.upperalpha {
-  list-style: upper-alpha }
-
-ol.lowerroman {
-  list-style: lower-roman }
-
-ol.upperroman {
-  list-style: upper-roman }
-
-p.attribution {
-  text-align: right ;
-  margin-left: 50% }
-
-p.caption {
-  font-style: italic }
-
-p.credits {
-  font-style: italic ;
-  font-size: smaller }
-
-p.label {
-  white-space: nowrap }
-
-p.rubric {
-  font-weight: bold ;
-  font-size: larger ;
-  color: maroon ;
-  text-align: center }
-
-p.sidebar-title {
-  font-family: sans-serif ;
-  font-weight: bold ;
-  font-size: larger }
-
-p.sidebar-subtitle {
-  font-family: sans-serif ;
-  font-weight: bold }
-
-p.topic-title {
-  font-weight: bold }
-
-pre.address {
-  margin-bottom: 0 ;
-  margin-top: 0 ;
-  font-family: serif ;
-  font-size: 100% }
-
-pre.literal-block, pre.doctest-block {
-  margin-left: 2em ;
-  margin-right: 2em }
-
-span.classifier {
-  font-family: sans-serif ;
-  font-style: oblique }
-
-span.classifier-delimiter {
-  font-family: sans-serif ;
-  font-weight: bold }
-
-span.interpreted {
-  font-family: sans-serif }
-
-span.option {
-  white-space: nowrap }
-
-span.pre {
-  white-space: pre }
-
-span.problematic {
-  color: red }
-
-span.section-subtitle {
-  /* font-size relative to parent (h1..h6 element) */
-  font-size: 80% }
-
-table.citation {
-  border-left: solid 1px gray;
-  margin-left: 1px }
-
-table.docinfo {
-  margin: 2em 4em }
-
-table.docutils {
-  margin-top: 0.5em ;
-  margin-bottom: 0.5em }
+div.admonition p.admonition-title {
+  font-weight: bold;
+  font-size: 150%;
+  border-bottom: 1px solid black;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
 
 table.footnote {
-  border-left: solid 1px black;
-  margin-left: 1px }
+  background: #ffffdd;
+  padding: 5px 0px 5px 0px;
+  border: 1px solid #cccccc;
+  margin: 0.3em 0px 0.3em 0px;
+}
 
-table.docutils td, table.docutils th,
-table.docinfo td, table.docinfo th {
-  padding-left: 0.5em ;
-  padding-right: 0.5em ;
-  vertical-align: top }
+table.first {
+  margin: 2.3em 0px 0.3em 0px;
+}
 
-table.docutils th.field-name, table.docinfo th.docinfo-name {
-  font-weight: bold ;
-  text-align: left ;
-  white-space: nowrap ;
-  padding-left: 0 }
+table.hello { margin-left: 3em; }
+table.hello td { padding: 3px; }
+table.hello th { padding: 3px; background: #dddddd; }
 
-h1 tt.docutils, h2 tt.docutils, h3 tt.docutils,
-h4 tt.docutils, h5 tt.docutils, h6 tt.docutils {
-  font-size: 100% }
+table.footnote td.label {
+  white-space: nowrap;
+  padding-right: 0.3em;
+}
 
-ul.auto-toc {
-  list-style-type: none }
+a.fn-backref:before {
+  content: url("2uparrow.png");
+  padding-right: 2px;
+}
+
+a.footnote-reference {
+  background: #ffffdd;
+  padding: 5px 2px 0px 2px;
+  white-space: nowrap;
+}
+
+a.footnote-reference:before {
+  content: url("2downarrow.png");
+  padding-right: 2px;
+}
+
+a.fn-backref {
+  vertical-align: top;
+}
+
+/* .nx { color: red; font-weight: bold } */ /* Function name */
+
+.c { color: #408080; font-style: italic } /* Comment */
+.err { border: 1px solid #FF0000 } /* Error */
+
+.k { color: #007020; font-weight: bold } /* Keyword  [DONE] */
+.o { color: #666666 } /* Operator */
+.cm { color: #408080; font-style: italic } /* Comment.Multiline */
+.cp { color: #BC7A00 } /* Comment.Preproc */
+.c1 { color: #408080; font-style: italic } /* Comment.Single */
+.cs { color: #408080; font-style: italic } /* Comment.Special */
+.gd { color: #A00000 } /* Generic.Deleted */
+.ge { font-style: italic } /* Generic.Emph */
+.gr { color: #FF0000 } /* Generic.Error */
+.gh { color: #000080; font-weight: bold } /* Generic.Heading */
+.gi { color: #00A000 } /* Generic.Inserted */
+.go { color: #808080 } /* Generic.Output */
+.gp { color: #000080; font-weight: bold } /* Generic.Prompt */
+.gs { font-weight: bold } /* Generic.Strong */
+.gu { color: #800080; font-weight: bold } /* Generic.Subheading */
+.gt { color: #0040D0 } /* Generic.Traceback */
+.kc { color: #008000; font-weight: bold } /* Keyword.Constant */
+.kd { color: #008000; font-weight: bold } /* Keyword.Declaration */
+.kp { color: #008000 } /* Keyword.Pseudo */
+.kr { color: #008000; font-weight: bold } /* Keyword.Reserved */
+.kt { color: #B00040 } /* Keyword.Type */
+.m { color: #666666 } /* Literal.Number */
+.s { color: #BA2121 } /* Literal.String */
+.na { color: #7D9029 } /* Name.Attribute */
+.nb { color: #008000 } /* Name.Builtin */
+.nc { color: #0000FF; font-weight: bold } /* Name.Class */
+.no { color: #880000 } /* Name.Constant */
+.nd { color: #AA22FF } /* Name.Decorator */
+.ni { color: #999999; font-weight: bold } /* Name.Entity */
+.ne { color: #D2413A; font-weight: bold } /* Name.Exception */
+.nf { color: #0000FF } /* Name.Function */
+.nl { color: #A0A000 } /* Name.Label */
+.nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
+.nt { color: #008000; font-weight: bold } /* Name.Tag */
+.nv { color: #19177C } /* Name.Variable */
+.ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
+.w { color: #bbbbbb } /* Text.Whitespace */
+.mf { color: #666666 } /* Literal.Number.Float */
+.mh { color: #666666 } /* Literal.Number.Hex */
+.mi { color: #666666 } /* Literal.Number.Integer */
+.mo { color: #666666 } /* Literal.Number.Oct */
+.sb { color: #BA2121 } /* Literal.String.Backtick */
+.sc { color: #BA2121 } /* Literal.String.Char */
+.sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */
+.s2 { color: #BA2121 } /* Literal.String.Double */
+.se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */
+.sh { color: #BA2121 } /* Literal.String.Heredoc */
+.si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */
+.sx { color: #008000 } /* Literal.String.Other */
+.sr { color: #BB6688 } /* Literal.String.Regex */
+.s1 { color: #BA2121 } /* Literal.String.Single */
+.ss { color: #19177C } /* Literal.String.Symbol */
+.bp { color: #008000 } /* Name.Builtin.Pseudo */
+.vc { color: #19177C } /* Name.Variable.Class */
+.vg { color: #19177C } /* Name.Variable.Global */
+.vi { color: #19177C } /* Name.Variable.Instance */
+.il { color: #666666 } /* Literal.Number.Integer.Long */
+
+table.codeblock, tr.codeblock, td.linenos, td.codeblock, table.codeblock pre { 
+	margin: 0; 
+	padding: 0; 
+	border: 0; 
+	vertical-align: baseline; 
+	border: none; 
+}
+
+td.linenos { 
+	border-right: 1px solid #AAAAAA; 
+	text-align: right; 
+	color: #AAAAAA; 
+	padding-right: 5px; 
+	padding-left: 5px; 
+}
+
+.codeblock { font-size: 110%; }
+
+td.codeblock { padding-left: 5px; }
+pre.codeblock { }
+pre.codeblock span.Normal { }
+
+pre.codeblock span.DataType { color: #902000; }
+pre.codeblock span.DecVal { color: #40a070; }
+pre.codeblock span.BaseN { color: #40a070; }
+pre.codeblock span.Float { color: #40a070; }
+pre.codeblock span.Char { color: #4070a0; }
+pre.codeblock span.String { color: #4070a0; }
+pre.codeblock span.Comment { color: #60a0b0; font-style: italic; }
+pre.codeblock span.Others { color: #007020; }
+pre.codeblock span.Alert { color: red; font-weight: bold; }
+pre.codeblock span.Function { color: #06287e; }
+pre.codeblock span.RegionMarker { }
+pre.codeblock span.Error { color: red; font-weight: bold; }
 
 </style>
 </head>
