Minor adjustment to README

--- a/manual/README.html
+++ b/manual/README.html
@@ -46,6 +46,9 @@ dt { font-weight: bold; margin-top: 0.5em; }
 .subtitle { text-align: center; margin: 1em 4em 4em 4em; }
 .topic-title { font-weight: bold; font-size: 130%; }
 .contents { margin-bottom: 1em; }
+.center { text-align: center }
+
+
 
 .contributors { margin-left: 250px; margin-top: 2em; margin-bottom: 2em; }
 dl.contributors { background: white; border: none; }
@@ -313,11 +316,13 @@ pre.codeblock span.Error { color: red; font-weight: bold; }
 <body>
 <div class="document" id="readme-txt">
 <h1 class="title">README.txt</h1>
-<h2 class="subtitle" id="citeproc-js-yet-another-csl-processor">citeproc-js: Yet Another CSL Processor</h2>
+<h2 class="subtitle" id="citeproc-js"><tt class="docutils literal"><span class="pre">citeproc-js</span></tt></h2>
 
+<div class="center container">
 <p>Frank Bennett</p>
 <p><em>Graduate School of Law, Nagoya University</em></p>
 <p>2009.08.20</p>
+</div>
 <hr class="docutils" />
 <p>This is an effort to implement a full-featured standalone CSL
 processor in Javascript, for use by the Zotero project, and by other
