Arrange for trailing punctuation set on cs:layout to migrate inward to the last rendering node.  Needed to prevent breakage in bibliography formatting, particularly for styles that use second-field-align or display attributes.  Fix required some smartening up in the non-rendering-group-suppression logic, also included in this changeset.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -23,6 +23,11 @@
 	<div id="chicago_fullnote_bibliography"></div>
 	
     <div class="heading">
+       IEEE style
+    </div>
+	<div id="ieee"></div>
+	
+    <div class="heading">
        Chicago Fullnote Bibliography (quotes inside punctuation)
     </div>
 	<div id="chicago_fullnote_bibliography2"></div>
