Eliminate debugging conditions from bundled code.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -10,7 +10,15 @@
   </head>
   <body onload="insert()">
 
-	<h1>Sample Bibliographies</h1>
+	<h1>CSL Bibliography Samples</h1>
+
+	<p>When viewed in Firefox with Javascript enabled, this page will
+       display a set of example bibliographies that illustrate some of
+       the capabilities of the citeproc-js citation formatter.  For more
+       details, see the <a href="http://citationstyles.org/">CSL website</a>
+       and the 
+       <a href="http://gsl-nagoya-u.net/http/pub/citeproc-doc.html">processor manual</a>
+    </p>
 
     <div class="heading">
        Chicago Author-Date (names sorted alphabetically, titles translated)
