Extend demo to include journal abbreviations.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -3,6 +3,7 @@
 	<link rel="stylesheet" type="text/css" href="./primitive.css" />
 	<script type="text/javascript" src="./citeproc.js"></script>
 	<script type="text/javascript" src="./loadlocale.js"></script>
+	<script type="text/javascript" src="./loadabbrevs.js"></script>
 	<script type="text/javascript" src="./loadsys.js"></script>
 	<script type="text/javascript" src="./loadcsl.js"></script>
 	<script type="text/javascript" src="./loadcites.js"></script>
@@ -21,22 +22,22 @@
     </p>
 
     <div class="heading">
-       Chicago Author-Date (names sorted alphabetically, titles translated)
+       Chicago Author-Date (names sorted alphabetically, titles translated, no abbreviations)
     </div>
 	<div id="chicago_author_date">[Sorry, the bibliography processor requires a Firefox browser with Javascript enabled.]</div>
 
     <div class="heading">
-       Chicago Fullnote Bibliography (names romanized, titles translated)
+       Chicago Fullnote Bibliography (names romanized, titles translated, "default" abbreviations)
     </div>
 	<div id="chicago_fullnote_bibliography"></div>
 	
     <div class="heading">
-       IEEE style
+       IEEE style ("slightly weird" abbreviations)
     </div>
 	<div id="ieee"></div>
 	
     <div class="heading">
-       Chicago Fullnote Bibliography (quotes inside punctuation)
+       Chicago Fullnote Bibliography (quotes inside punctuation, "default" abbreviations)
     </div>
 	<div id="chicago_fullnote_bibliography2"></div>
 	
