A few more goodies for the demo page.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -29,7 +29,10 @@
     <div class="heading">
        Chicago Fullnote Bibliography (names romanized, titles translated, "default" abbreviations)
     </div>
-	<div id="chicago_fullnote_bibliography"></div>
+	<h2>Books</h2>
+	<div id="chicago_fullnote_bibliography_books"></div>
+	<h2>Articles</h2>
+	<div id="chicago_fullnote_bibliography_articles"></div>
 	
     <div class="heading">
        IEEE style ("slightly weird" abbreviations)
