Author pubs listing section for the demo page.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -24,16 +24,24 @@
     <div class="heading">
        Chicago Author-Date (names sorted alphabetically, titles translated, no abbreviations)
     </div>
-	<div id="chicago_author_date">[Sorry, the bibliography processor requires a Firefox browser with Javascript enabled.]</div>
+	<div class="hangindent" id="chicago_author_date">[Sorry, the bibliography processor requires a Firefox browser with Javascript enabled.]</div>
 
     <div class="heading">
        Chicago Fullnote Bibliography (names romanized, titles translated, "default" abbreviations)
     </div>
 	<h2>Books</h2>
-	<div id="chicago_fullnote_bibliography_books"></div>
+	<div class="hangindent" id="chicago_fullnote_bibliography_books"></div>
 	<h2>Articles</h2>
-	<div id="chicago_fullnote_bibliography_articles"></div>
+	<div class="handindent" id="chicago_fullnote_bibliography_articles"></div>
 	
+    <div class="heading">
+       Per-author publication listing
+    </div>
+    <div class="dateindent">
+  	  <div id="chicago_author_date_listing"></div>
+	</div>
+
+
     <div class="heading">
        IEEE style ("slightly weird" abbreviations)
     </div>
