Fix to indentation in demo page, italics for the annotation text.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -32,7 +32,7 @@
 	<h2>Books</h2>
 	<div class="hangindent" id="chicago_fullnote_bibliography_books"></div>
 	<h2>Articles</h2>
-	<div class="handindent" id="chicago_fullnote_bibliography_articles"></div>
+	<div class="hangindent" id="chicago_fullnote_bibliography_articles"></div>
 	
     <div class="heading">
        Per-author publication listing
