Parallel cites for the demo page.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -33,6 +33,8 @@
 	<div class="hangindent" id="chicago_fullnote_bibliography_books"></div>
 	<h2>Articles</h2>
 	<div class="hangindent" id="chicago_fullnote_bibliography_articles"></div>
+	<h2>Table of Cases</h2>
+	<div class="hangindent" id="chicago_fullnote_bibliography_cases"></div>
 	
     <div class="heading">
        Per-author publication listing
