Adding page breaks to the demo page.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -26,7 +26,7 @@
     </div>
 	<div class="hangindent" id="chicago_author_date">[Sorry, the bibliography processor requires a Firefox browser with Javascript enabled.]</div>
 
-    <div class="heading">
+    <div class="heading pagebreak">
        Chicago Fullnote Bibliography (names romanized, titles translated, "default" abbreviations)
     </div>
 	<h2>Table of Cases</h2>
@@ -36,7 +36,7 @@
 	<h2>Articles</h2>
 	<div class="hangindent" id="chicago_fullnote_bibliography_articles"></div>
 	
-    <div class="heading">
+    <div class="heading pagebreak">
        Per-author publication listing
     </div>
     <div class="dateindent">
@@ -44,12 +44,12 @@
 	</div>
 
 
-    <div class="heading">
+    <div class="heading pagebreak">
        IEEE style ("slightly weird" abbreviations)
     </div>
 	<div id="ieee"></div>
 	
-    <div class="heading">
+    <div class="heading pagebreak">
        Chicago Fullnote Bibliography (quotes inside punctuation, "default" abbreviations)
     </div>
 	<div id="chicago_fullnote_bibliography2"></div>
