DOM implementation (still incomplete but) runs the demo page without error.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -18,7 +18,24 @@
        the capabilities of the citeproc-js citation formatter.  For more
        details, see the <a href="http://citationstyles.org/">CSL website</a>
        and the 
-       <a href="http://gsl-nagoya-u.net/http/pub/citeproc-doc.html">processor manual</a>
+       <a href="http://gsl-nagoya-u.net/http/pub/citeproc-doc.html">processor manual</a>.
+    </p>
+
+    <p>A few comments on the bibliography listings below.  These are generated
+       from a single set of database entries; the formatting you see is
+       entirely controlled by style code fed to the CSL processor inside
+       your browser.  In this page, the style code has been handled using 
+       the DOM (Document Object Model, a standard mechanism for parsing
+       structured documents, available in all modern Web browsers).  For
+       server-side use, the processor can also use the E4X parsing engine,
+       which is available natively in the Rhino, Spidermonkey and
+       Tracemonkey Javascript implementations.
+    </p>
+
+    <p>If parsing fails and you do not see bibliography listings below,
+       please send mail to 
+       <a href="mailto:biercenator@gmail.com">biercenator@gmail.com</a>, so
+       we can adjust things to work with your browser.
     </p>
 
     <div class="heading">
