Refactoring to get the demo page running in Google Chrome.  GC precompiles all javascript, so incompatible syntax crashes the entire module in which it is contained.  This has necessitated splitting off the parser modules into separate files, with consequent effects on frameworks for running the processor.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,6 +1,8 @@
 <html>
   <head>
 	<link rel="stylesheet" type="text/css" href="./primitive.css" />
+	<script type="text/javascript" src="./xmle4x.js"></script>
+	<script type="text/javascript" src="./xmldom.js"></script>
 	<script type="text/javascript" src="./citeproc.js"></script>
 	<script type="text/javascript" src="./loadlocale.js"></script>
 	<script type="text/javascript" src="./loadabbrevs.js"></script>
