Many fixes, large and small, for IE6 support.  Still broken, this is a CYA checkin.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -47,7 +47,7 @@
     <div class="heading">
        Chicago Author-Date (names sorted alphabetically, titles translated, no abbreviations, year italicized for testing purposes)
     </div>
-	<div class="hangindent" id="chicago_author_date">[Sorry, the bibliography processor requires a Firefox browser with Javascript enabled.]</div>
+	<div class="hangindent" id="chicago_author_date">[Sorry, the bibliography processor requires a Firefox, Safari or Chrome browser with Javascript enabled.]</div>
 
     <div class="heading pagebreak">
        Chicago Fullnote Bibliography (names romanized, titles translated, "default" abbreviations)
