Various fixes for IE6 support.  CYA checkin.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -75,7 +75,7 @@
     <div class="heading pagebreak">
        Chicago Fullnote Bibliography (quotes inside punctuation, "default" abbreviations)
     </div>
-	<div id="chicago_fullnote_bibliography2"></div>
+	<div id="chicago_fullnote_bibliography2">[Placeholder]</div>
 	
   </body>
 </html>
