--- a/demo/sampledata.html
+++ b/demo/sampledata.html
@@ -1,42 +1,11 @@
-/*
- * Copyright (c) 2009 and 2010 Frank G. Bennett, Jr. All Rights Reserved.
- *
- * The contents of this file are subject to the Common Public
- * Attribution License Version 1.0 (the \u201cLicense\u201d); you may not use
- * this file except in compliance with the License. You may obtain a
- * copy of the License at:
- *
- * http://bitbucket.org/fbennett/citeproc-js/src/tip/LICENSE.
- *
- * The License is based on the Mozilla Public License Version 1.1 but
- * Sections 14 and 15 have been added to cover use of software over a
- * computer network and provide for limited attribution for the
- * Original Developer. In addition, Exhibit A has been modified to be
- * consistent with Exhibit B.
- *
- * Software distributed under the License is distributed on an \u201cAS IS\u201d
- * basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See
- * the License for the specific language governing rights and limitations
- * under the License.
- *
- * The Original Code is the citation formatting software known as
- * "citeproc-js" (an implementation of the Citation Style Language
- * [CSL]), including the original test fixtures and software located
- * under the ./std subdirectory of the distribution archive.
- *
- * The Original Developer is not the Initial Developer and is
- * __________. If left blank, the Original Developer is the Initial
- * Developer.
- *
- * The Initial Developer of the Original Code is Frank G. Bennett,
- * Jr. All portions of the code written by Frank G. Bennett, Jr. are
- * Copyright (c) 2009 and 2010 Frank G. Bennett, Jr. All Rights Reserved.
- */
-
-
-
-
-var data = {
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <title>Sample data for CSL demo page</title>
+</head>
+<body>
+<pre>
+{
 	"ITEM-1": {
 		"id": "ITEM-1",
 		"title":"Boundaries of Dissent: Protest and State Power in the Media Age",
@@ -144,56 +113,56 @@ var data = {
 		"id": "ITEM-5",
 		"author": [
 			{
-				"family": "\u68b6\u7530",
-				"given": "\u5c06\u53f8"
+				"family": "梶田",
+				"given": "将司"
 			},
 			{
 				"family": ":ja-alalc97: Kajita",
 				"given": "Shoji"
 			},
 			{
-				"family": "\u89d2\u6240",
-				"given": "\u8003"
+				"family": "角所",
+				"given": "考"
 			},
 			{
 				"family": ":ja-alalc97: Kakusho",
 				"given": "Takashi"
 			},
 			{
-				"family": "\u4e2d\u6fa4",
-				"given": "\u7be4\u5fd7"
+				"family": "中澤",
+				"given": "篤志"
 			},
 			{
 				"family": ":ja-alalc97: Nakazawa",
 				"given": "Atsushi"
 			},
 			{
-				"family": "\u7af9\u6751",
-				"given": "\u6cbb\u96c4"
+				"family": "竹村",
+				"given": "治雄"
 			},
 			{
 				"family": ":ja-alalc97: Takemura",
 				"given": "Haruo"
 			},
 			{
-				"family": "\u7f8e\u6fc3",
-				"given": "\u5c0e\u5f66"
+				"family": "美濃",
+				"given": "導彦"
 			},
 			{
 				"family": ":ja-alalc97: Mino",
 				"given": "Michihiko"
 			},
 			{
-				"family": "\u9593\u702c",
-				"given": "\u5065\u4e8c"
+				"family": "間瀬",
+				"given": "健二"
 			},
 			{
 				"family": ":ja-alalc97: Mase",
 				"given": "Kenji"
 			}
 		],
-		"title": "\u9ad8\u7b49\u6559\u80b2\u6a5f\u95a2\u306b\u304a\u3051\u308b\u6b21\u4e16\u4ee3\u6559\u80b2\u5b66\u7fd2\u652f\u63f4\u30d7\u30e9\u30c3\u30c8\u30d5\u30a9\u30fc\u30e0\u306e\u69cb\u7bc9\u306b\u5411\u3051\u3066 :ja-alalc97: K\u014dt\u014d ky\u014diku ni okeru jisedai ky\u014diku gakush\u016b shien puratto f\u014dmu no k\u014dchiku ni mukete :en: Toward the Development of Next-Generation Platforms for Teaching and Learning in Higher Education",
-		"container-title": "\u65e5\u672c\u6559\u80b2\u5de5\u5b66\u4f1a\u8ad6\u6587\u8a8c",
+		"title": "高等教育機関における次世代教育学習支援プラットフォームの構築に向けて :ja-alalc97: Kōtō kyōiku ni okeru jisedai kyōiku gakushū shien puratto fōmu no kōchiku ni mukete :en: Toward the Development of Next-Generation Platforms for Teaching and Learning in Higher Education",
+		"container-title": "日本教育工学会論文誌",
 		"volume": "31",
 		"issue": "3",
 		"page": "297-305",
@@ -318,50 +287,51 @@ var data = {
 		"type": "article-journal"
 	},
     "ITEM-10": {
-        "container-title": "N.Y.2d",
-        "id": "ITEM-10",
+        "container-title": "N.Y.2d", 
+        "id": "ITEM-10", 
         "issued": {
             "date-parts": [
                 [
                     "1989"
                 ]
             ]
-        },
-        "page": "683",
-        "title": "People v. Taylor",
-        "type": "legal_case",
+        }, 
+        "page": "683", 
+        "title": "People v. Taylor", 
+        "type": "legal_case", 
         "volume": 73
-    },
+    }, 
     "ITEM-11": {
-        "container-title": "N.E.2d",
-        "id": "ITEM-11",
+        "container-title": "N.E.2d", 
+        "id": "ITEM-11", 
         "issued": {
             "date-parts": [
                 [
                     "1989"
                 ]
             ]
-        },
-        "page": "386",
-        "title": "People v. Taylor",
-        "type": "legal_case",
+        }, 
+        "page": "386", 
+        "title": "People v. Taylor", 
+        "type": "legal_case", 
         "volume": 541
-    },
+    }, 
     "ITEM-12": {
-        "container-title": "N.Y.S.2d",
-        "id": "ITEM-12",
+        "container-title": "N.Y.S.2d", 
+        "id": "ITEM-12", 
         "issued": {
             "date-parts": [
                 [
                     "1989"
                 ]
             ]
-        },
-        "page": "357",
-        "title": "People v. Taylor",
-        "type": "legal_case",
+        }, 
+        "page": "357", 
+        "title": "People v. Taylor", 
+        "type": "legal_case", 
         "volume": 543
     }
 
 };
-
+</pre>
+</html>
