Parallel citation detection now copes with public domain citations in first position, quashing the trailing year in subsequent cites as Bluebook seems to require.  The print statement scars have been left in the source; the code for parallel detection is ugly and arcane and there's no point pretending otherwise.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -55,14 +55,69 @@
     </div>
 	<div class="hangindent" id="chicago_author_date">[Sorry, the bibliography processor requires a Firefox, Safari or Chrome browser with Javascript enabled.]</div>
 
+
+
     <div class="heading pagebreak">
        Chicago Fullnote Bibliography (names romanized, titles translated, "default" abbreviations)
     </div>
-	<h2>Table of Cases</h2>
+    <p>
+      Bei un gewëss Hämmelsbrot d'Margréitchen, gét Noper blëtzen
+      Dauschen am. Op dan engem Blieder Feierwon, un der ston zielen
+      duerch. Hin wielen heemlech mä, hu ech éiweg klinzecht. Ass an
+      Himmel rëschten, wee d'wäiss bessert Freiesch dé, hirem d'Leit
+      Blieder eng an. Si aus iwer Mamm, geet schlon op get, de Engel
+      rifft gudden net.
+    </p>
+    <p>
+      Aus um fest spilt gefällt, hun zënne rëscht ké. Mä Räis sech
+      gemaacht déi, dé och Welt Hären, ech dénen geplot d'Gaassen
+      et. Hier beschte verstoppen da ech, vill heemlech net um. Esou
+      Scholl schléit un fir. Wat ma'n kille d'Hiezer wa, frou Mecht
+      Schiet am fir. Mä rëm keng Engel bleiwe, gëtt Stret geplot dé
+      dem, déi zënne gudden löschteg op.
+    </p>
+    <div style="width:5em">
+       <hr />
+    </div>
+    <!-- So ... what goes here?
+         Content: articles, books, cases, session laws, codes, subsidiary regs.
+                
+                Articles or books: simple id, id to sole prev fn ref, simple
+                supra, supra as gen'l ref to prev cite w/locator.  [data in]
+
+                Cases: Parallel cite.  First ref, subsequent ref.  With locators.
+                [data in]
+
+                English case, with year and volume.  Parallel cite.
+
+                Case with public cite form.  Parallel cite.  With locators.
+
+Fresh problem: trailing values absent in one parallel cite partner
+should be excluded from comparison (true already, I think), and should
+be suppressed in subsequent partners.
+
+                Session laws:  Parallel cite.  First ref, subsequent ref.  With locators.
+
+Fresh problem: supplements published in another year, either standalone
+or as part of cite to main publication.  For this, just use a literal,
+driven by a quote escape in the UI.  Punt.
+                
+                Code: Parallel cite.  First ref, subsequent ref.  With locators.
+
+                Subsidiary reg: First ref, subsequent ref.  With locators.
+    -->
+    <div class="footnote">
+      <sup>1</sup><span name="citation1">[citation1]</span>
+    </div>
+    <div class="footnote">
+      <sup>2</sup><span name="citation2">[citation2]</span>
+    </div>
+    <h2>Bibliography</h2>
+	<h3>Legal Resources</h3>
 	<div class="hangindent" id="chicago_fullnote_bibliography_cases"></div>
-	<h2>Books</h2>
+	<h3>Books</h3>
 	<div class="hangindent" id="chicago_fullnote_bibliography_books"></div>
-	<h2>Articles</h2>
+	<h3>Articles</h3>
 	<div class="hangindent" id="chicago_fullnote_bibliography_articles"></div>
 	
     <div class="heading pagebreak">
