--- a/demo/sampledata.html
+++ b/demo/sampledata.html
@@ -49,7 +49,7 @@
 	},
 	"ITEM-3": {
 		"id": "ITEM-3",
-		"title":"Key Process Conditions for Production of C<sub>4</sub> Dicarboxylic Acids in Bioreactor Batch Cultures of an Engineered <i>Saccharomyces cerevisiae</i> Strain",
+		"title":"Key Process Conditions for Production of C&lt;sub&gt;4&lt;/sub&gt; Dicarboxylic Acids in Bioreactor Batch Cultures of an Engineered &lt;i&gt;Saccharomyces cerevisiae&lt;/i&gt; Strain",
         "note":"This cite illustrates the rich text formatting capabilities in the new processor, as well as page range collapsing (in this case, applying the collapsing method required by the Chicago Manual of Style).  Also, as the IEEE example above partially illustrates, we also offer robust handling of particles such as \"van\" and \"de\" in author names.",
 		"author": [
 			{
@@ -248,7 +248,7 @@
 		"volume": "9",
 		"issue": "8",
 		"page": "1123-1136",
-		"title": "Metabolic engineering of <i>Saccharomyces cerevisiae</i> for production of carboxylic acids: current status and challenges",
+		"title": "Metabolic engineering of &lt;i&gt;Saccharomyces cerevisiae&lt;/i&gt; for production of carboxylic acids: current status and challenges",
 		"contributor":[
 			{
 				"family": "Zelle",
