Updated demo page source, with Bluebook examples.

--- a/demo/sampledata.html
+++ b/demo/sampledata.html
@@ -330,6 +330,117 @@
         "title": "People v. Taylor", 
         "type": "legal_case", 
         "volume": 543
+    },
+    "ITEM-13": {
+        "id": "ITEM-13", 
+        "title": "民法 :ja-alalc97: Minpō :en: Japanese Civil Code", 
+        "type": "legislation"
+    },
+    "ITEM-14": {
+        "id": "ITEM-14", 
+        "title": "Clayton Act",
+        "container-title": "ch.",
+        "number": 323,
+		"issued": {
+           "date-parts": [
+             [
+                1914
+             ]
+           ]
+		},
+        "type": "legislation"
+    },
+    "ITEM-15": {
+        "id": "ITEM-15", 
+        "title": "Clayton Act",
+		"volume":38,
+        "container-title": "Stat.",
+        "page": 730,
+		"issued": {
+           "date-parts": [
+             [
+                1914
+             ]
+           ]
+		},
+        "type": "legislation"
+    },
+    "ITEM-16": {
+        "id": "ITEM-16", 
+        "title": "FTC Credit Practices Rule",
+		"volume":16,
+        "container-title": "C.F.R.",
+        "section": 444,
+		"issued": {
+           "date-parts": [
+             [
+                1999
+             ]
+           ]
+		},
+        "type": "legislation"
+    },
+    "ITEM-17": {
+        "id": "ITEM-17", 
+        "title": "Beck v. Beck",
+		"volume":1999,
+        "container-title": "ME",
+        "page": 110,
+		"issued": {
+           "date-parts": [
+             [
+                1999
+             ]
+           ]
+		},
+        "type": "legal_case"
+    },
+    "ITEM-18": {
+        "id": "ITEM-18", 
+        "title": "Beck v. Beck",
+		"volume":733,
+        "container-title": "A.2d",
+        "page": 981,
+		"issued": {
+           "date-parts": [
+             [
+                1999
+             ]
+           ]
+		},
+        "type": "legal_case"
+    },
+    "ITEM-19": {
+        "id": "ITEM-19", 
+        "title": "Donoghue v. Stevenson",
+		"volume":1932,
+        "container-title": "App. Cas.",
+        "page": 562,
+		"issued": {
+           "date-parts": [
+             [
+                1932
+             ]
+           ]
+		},
+        "type": "legal_case"
+    },
+    "ITEM-20": {
+        "id": "ITEM-20", 
+        "title": "British Columbia Elec. Ry. v. Loach",
+		"volume":1916,
+		"issue":1,
+        "container-title": "App. Cas.",
+        "page": 719,
+		"authority":"P.C.",
+		"issued": {
+           "date-parts": [
+             [
+                1915
+             ]
+           ]
+		},
+        "type": "legal_case"
     }
 
 };
