Demo files, with some examples of Bluebook citation and (one example of) names-based disambiguation.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -71,9 +71,27 @@
     </p>
 
     <div class="heading">
-       Chicago Author-Date (names sorted alphabetically, titles translated, no abbreviations, year italicized for testing purposes)
+       Chicago Author-Date (names sorted alphabetically, titles translated, no abbreviations, ambiguous name)
     </div>
-	<div class="hangindent" id="chicago_author_date">[Sorry, the bibliography processor requires a Firefox, Safari or Chrome browser with Javascript enabled.]</div>
+    <p>
+       Teren aldëon etelotya epë ma, murmë leuca rempa nu loc, nar
+       raxë estel naitya oa. <span id="cad1"
+       name="citation_cad">[cite]</span> Nu mir anca costa, arca rondë
+       liéva ëa huo. <span id="cad2" name="citation_cad">[cite]</span>
+       Aiwë pelentul tol sú. <span id="cad3"
+       name="citation_cad">[cite]</span> Ëa harë línë tenna mel, eques
+       talta ataqua qua sú. <span id="cad4"
+       name="citation_cad">[cite]</span> Úvë ataqua simpina caimassë
+       us, sir ronyo haloitë tareldar et, né manë mitta liquis
+       eru. <span id="cad5" name="citation_cad">[cite]</span> Oi táp
+       laicë nainanyéna leryalehtya, sindar nostalë at
+       axa. <span id="cad6" name="citation_cad">[cite]</span> Wen
+       namna sairon tellaurë er, hahta pendë quesset lia us, ré apa
+       línë cotumo métima. <span id="cad7"
+       name="citation_cad">[cite]</span>
+    </p>
+    <h2>Bibliography</h2>
+	<div class="hangindent" id="chicago_author_date">[Sorry, the bibliography processor requires a browser with Javascript enabled.]</div>
 
     <div class="heading pagebreak">
        Bluebook + Chicago Fullnote Bibliography
