Change Bibliography to References in demo page example of Chicago Author-Date.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -90,7 +90,7 @@
        línë cotumo métima. <span id="cad7"
        name="citation_cad">[cite]</span>
     </p>
-    <h2>Bibliography</h2>
+    <h2>References</h2>
 	<div class="hangindent" id="chicago_author_date">[Sorry, the bibliography processor requires a browser with Javascript enabled.]</div>
 
     <div class="heading pagebreak">
