Amendments to manual, deprecating restoreProcessorState() (soon to be withdrawn completely) and withrawing previewCitationClusterStatic().

--- a/manual/index.html
+++ b/manual/index.html
@@ -7,6 +7,10 @@
 <title>The citeproc-js Citation Processor</title>
 <style type="text/css">
 
+.redback {
+  background: #ffaaaa;
+}
+
 p.fixed {
   position: fixed;
   top: 0;
@@ -1106,6 +1110,7 @@ the preview object to be retained.</p>
 </div>
 <div class="section" id="restoreprocessorstate">
 <h2><a class="toc-backref" href="#id61"><tt class="docutils literal"><span class="pre">restoreProcessorState()</span></tt></a></h2>
+<p class="redback">[deprecated: use <tt class="docutils literal"><span class="pre">previewCitationCluster()</span></tt> instead]</p>
 <p>The <tt class="docutils literal"><span class="pre">restoreProcessorState()</span></tt> command can be used to restore the
 processor state in a single operation, where citation objects,
 complete with position variables and <tt class="docutils literal"><span class="pre">sortkeys</span></tt>, are available.
